--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "barrier": "cpp"
+        "barrier": "cpp",
+        "pthread.h": "c"
     }
 }
